# paper-verification-passivecoder

./: .gitignore  README.md  app.py  pyproject.toml
paper_audit/: __init__.py  analyzer.py  cli.py  models.py  ocr.py  scraper.py  service.py  settings.py  utils.py  verifier.py
paper_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: app.js  styles.css
templates/: index.html
